k8s/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-coffee-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: virtual-coffee-backend
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: virtual-coffee-frontend
            port:
              number: 80
